<resources>
    <string name="app_name">BMI Analyzer</string>
    <string name="welcome">Welcome Back</string>
    <string name="haveAccount">If you already have an account, log in</string>
    <string name="ButtonNext">Next</string>
    <string name="createAccount">Create New Account</string>
    <string name="doNotHaveAccount">If you do not already have an account</string>
    <string name="name">Name</string>
    <string name="Q_HaveAccount">You have An Account ?</string>
    <string name="Q_doNotHaveAccount">You Do not Have An Account ?</string>
    <string name="Login">Login</string>
    <string name="LOGIN">LOG IN</string>
    <string name="LOGOUT">Logout</string>
    <string name="E_Mail">E-Mail</string>
    <string name="Password">Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="ButtonEye">ButtonEye</string>
    <string name="create_Button">CREATE</string>
    <string name="Username">Username</string>
    <string name="Re_Password">Re-Password</string>
    <string name="complete">Complete Your Information</string>
    <string name="Gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Weight">Weight</string>
    <string name="saveData_Button">Save Data</string>
    <string name="dateOfBirth">Date Of Birth</string>
    <string name="date">Date</string>
    <string name="cm">cm</string>
    <string name="length">Length</string>
    <string name="Kg">Kg</string>
    <string name="ButtonMinus">minus</string>
    <string name="ButtonPlus">plus</string>
    <string name="newRecord">New Record</string>
    <string name="time">Time</string>
    <string name="ButtonPrevious">previous</string>
    <string name="AddFoodDetails">Add Food Details</string>
    <string name="category">Category</string>
    <string name="calory">Calory</string>
    <string name="photo">Photo</string>
    <string name="Uploadphoto">Uploadphoto</string>
    <string name="Save">Save</string>
    <string name="hi">Hi, Mohammed</string>
    <string name="currentstatus">Current Status</string>
    <string name="oldStatus">Old Status</string>
    <string name="textdate">20/1/2020</string>
    <string name="textkg">60kg</string>
    <string name="statuse">Normal</string>
    <string name="hight">170 cm</string>
    <string name="add_food">Add Food</string>
    <string name="add_recored">Add Record</string>
    <string name="view_food">View Food</string>
    <string name="edit_food">Edit Food</string>
    <string name="food_List">Food List</string>
    <string name="food_name">Salamon</string>
    <string name="type">Fish</string>
    <string name="wig">22cal/ g</string>
    <string name="Edit">Edit</string>
    <string name="user_error">Please enter a username</string>
    <string name="error_invalid_user">User is not valid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a password again </string>
    <string name="title_activity_main_home">MainHome</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>