<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">
    <TextView
        android:id="@+id/Registration_tittle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/blue"
        android:paddingTop="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_newaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/createAccount"
        android:textColor="@color/blue"
        android:textSize="35sp"
        android:textStyle="bold"
        android:translationX="25dp"
        android:translationY="130dp" />


    <TextView
        android:id="@+id/text_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/doNotHaveAccount"
        android:textAlignment="center"
        android:textColor="#A3A5A6"
        android:textSize="20sp"
        android:translationX="35dp"
        android:translationY="200dp" />


    <EditText
        android:id="@+id/Name"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"

        android:hint="@string/name"
        android:textAllCaps="false"
        android:textColor="#A59999"
        android:textColorLink="@color/blue"
        android:textSize="17sp"
        android:textStyle="bold"
        android:translationX="15dp"
        android:translationY="300dp" />
    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/E_Mail"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textColor="#DF3D4245"
        android:textColorLink="@color/blue"
        android:textSize="17sp"
        android:textStyle="bold"
        android:translationX="15dp"
        android:translationY="350dp" />


    <EditText
        android:id="@+id/TextPassword"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="#DF3D4245"

        android:textSize="17sp"
        android:textStyle="bold"
        android:translationX="15dp"
        android:translationY="410dp" />

    <Button
        android:id="@+id/button_iconPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:background="#00B82323"
        android:translationX="330dp"
        android:translationY="400dp"
        app:icon="@drawable/eys"
        app:iconSize="30dp"
        app:iconTint="#81171515" />


    <EditText
        android:id="@+id/TextRePassword"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/Re_Password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="#DF3D4245"
        android:textColorLink="@color/blue"
        android:textSize="17sp"
        android:textStyle="bold"
        android:translationX="15dp"
        android:translationY="470dp" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:maxHeight="3dp"
        android:paddingLeft="10dp"
        android:text="@string/create_Button"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:translationX="60dp"
        android:translationY="550dp" />


    <TextView
        android:id="@+id/text_condition2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/Q_HaveAccount"
        android:textAlignment="center"
        android:textColor="#141515"
        android:textSize="20sp"
        android:textStyle="normal"
        android:translationX="70dp"
        android:translationY="620dp" />


    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/Login"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationX="300dp"
        android:translationY="620dp" />

</RelativeLayout>