<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".t_element">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/date"
            android:layout_width="167dp"
            android:layout_height="101dp"
            android:layout_weight="2"
            android:background="@drawable/back"
            android:gravity="center_horizontal"
            android:inputType="date"
            android:padding="5dp"
            android:text="@string/textdate"
            android:textColor="@color/black"
            android:textSize="25dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="49dp" />

        <TextView
            android:id="@+id/w"
            android:layout_width="137dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/back"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/textkg"
            android:textColor="@color/black"
            android:textSize="25dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="216dp"
            tools:layout_editor_absoluteY="0dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/l"
        android:layout_width="144dp"
        android:layout_height="108dp"
        android:layout_weight="2"
        android:background="@drawable/back"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/hight"
        android:textColor="@color/black"
        android:textSize="25dp"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="111dp" />

    <TextView
        android:id="@+id/status"
        android:layout_width="167dp"
        android:layout_height="110dp"
        android:layout_weight="2"
        android:background="@drawable/back"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/statuse"
        android:textColor="@color/black"
        android:textSize="25dp"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="111dp" />


</androidx.constraintlayout.widget.ConstraintLayout>